tests/files/flow_controller_tests/should_run/018.cmdr
//Test modulo with floats
x = 5.5 % 2.1;
println x;
x %= 0.5;
println x;
