tests/files/flow_controller_tests/should_fail/005.cmdr
//Should fail on divide by 0.0
x = 1.0 % 0.0;